# Agent-AI-RAG-multimodel

./: README.md  main.py  pyproject.toml  requirements.txt  structure.txt
data/chroma_db/: chroma.sqlite3
src/: __init__.py  chains.py  config.py  document_loader.py  embedding_model.py  llm_factory.py  vector_store.py
tests/: test_smoke.py
ui/: __init__.py  chat.py  sidebar.py  uploader.py
